# opencode_platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_UPLOAD.md  LICENSE  PROGRESS_REPORT.md  PROJECT_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  check_qdrant.py  deploy.sh  diagnose.py  diagnose_rag.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.ps1  stop.ps1  test_api.py
docker/: Dockerfile  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
docker/sandbox/: Dockerfile  build.ps1  build.sh  runner.py
docs/: COMPLETE_DOCUMENTATION.md  FULL_TECHNICAL_DOCUMENTATION.md  MIGRATION_GUIDE.md  OCR_INSTALL.md  ROADMAP.md  SANDBOX_SETUP.md
frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminPanel.jsx  AgentsPage.jsx  AuditLogPanel.jsx  ChatInterface.jsx  CodeExecutionResult.jsx  CodePlayground.jsx  CollectionDetailPage.jsx  CollectionsPage.jsx  CostDashboard.jsx  DeepResearchPanel.jsx  DocumentList.jsx  FilePreview.jsx  LoginPage.jsx  MCPPage.jsx  PDFViewer.jsx  PluginManager.jsx  PluginMarketplace.jsx  ProcessSteps.jsx  ResearchPanel.jsx  SourceCard.jsx  ThinkingBlock.jsx  ToolCallBlock.jsx  UserManagement.jsx  WorkflowEditor.jsx
nginx/: nginx.conf
plugins/: PLUGIN_DEV_GUIDE.md
plugins/example-translator/: main.py  plugin.json
plugins/stock-analyst/: main.py  plugin.json
plugins/weather-tool/: main.py  plugin.json
scripts/: dev_setup.sh  upload_pdfs.py
src/opencode/: __init__.py
src/opencode/agents/: __init__.py  base.py  coordinator.py  dispatcher.py  routes.py  specialists.py
src/opencode/api/: main.py
src/opencode/auth/: __init__.py  jwt.py  models.py  routes.py  service.py
src/opencode/cli/: main.py
src/opencode/config/: settings.py
src/opencode/control_plane/: __init__.py
src/opencode/core/: context.py  engine.py  env.py  events.py  protocols.py  utils.py
src/opencode/gateway/: mcp_gateway.py
tests/: FULL_TEST_PLAN.md  QUICK_TEST_GUIDE.md  RAG_TEST_PLAN.md  test_all.py  test_quick.ps1  test_rag.py
tests/unit/: test_core.py
(+60 files in other folders)
